
Specify scratch>70 for mergeReconChunks.
Don't specify LSF allocation group.
Run most things on long, digi & recon on medium.
Don't specifiy 32-bit hosts.
Set MALLOC_CHECK_=0.

Enable export of FT1, with proper(ish) name.
Use MET at time of run lock creation as version of run-level files.
Generate dynamic code for Monitor at install time.
Add some missing dependencies in XML.
-------------------------------------------

1.11
-----------------
EM v8r1109p10
ROOT v5.14.00g
Monitor mk20070719
TestReport v3r7p4 (only used for histo merge code)
EngineeringModelRoot v3r1p2

Get rid of TestReport-based monitoring.
Put actual queue names in XML, instead of vars from config.py
Fiddle queues & priorities to try to favor FT1/FT2
Add test mode:
	automatically entered if we are not on prod server
	write data to test location
	use LISOC loopback for FTx exports
Make svacTuple depend on success of all crumbs in the chunk
Do crumb cleanup
-------------------------------------------

1.12
-----------------
Use GPL2 version of stageFiles.py.
Use ISOC installation of python2.5.
Run crumb cleanup on short.
config.py defaults to test mode (and doesn't crash) if pipeline env vars 
aren't set.
-------------------------------------------

1.13
-----------------
EM v8r1109p12
Monitor dp20070728

Don't put package versions in dir names - just L1 version at the top.
Run digi & recon trending on chunks, use new treemerge.exe.
Use 'Trend' instead of 'TdMon' and 'Td' in process and file names.

Trending ingest is failing.
-------------------------------------------

1.14 (neither tagged nor comitted)
-----------------
Fail on bad result from stageFiles.StageSet.finish().
Better error handling in runner.run().
Remove TestReport stuff.
Increase crumb size (to 17000), run recon on long.
Fix a couple of dumb little bugs.
-------------------------------------------

1.15
-----------------
Move most processes to long so they don't interfere with recon.
-------------------------------------------
