@@ -381,7 +381,7 @@
          </prerequisites>
 
          <process name="digitization">
-            <job executable="${L1ProcROOT}/digitize.py" batchOptions=" -q medium -sp 100 "   />
+            <job executable="${L1ProcROOT}/digitize.py" batchOptions=" -q long -sp 100 "   />
          </process>
  
          <process name="fastMon">
@@ -435,7 +435,7 @@
             <variables>
                <var name="fileType">merit</var>
             </variables>
-            <job executable="${L1ProcROOT}/mergeStuff.py" batchOptions=" -q short -sp 100 "   />
+            <job executable="${L1ProcROOT}/mergeStuff.py" batchOptions=" -q medium -sp 100 "   />
             <depends>
                <after process="doCrumb.recon" status="DONE"/>
             </depends>
